# ScanToExternApp

./: .gitignore  CLAUDE.md  HANDOFF.md  INSTALL.md  NOTARIZATION.md  README.md  STATUS.md  XCODE_SETUP.md
.github/workflows/: build.yml
BrowserExtension/: background.js  content.js  manifest.json  popup.html  popup.js
docs/claude/: README.md  acceptance-criteria.md  architecture.md  build-phases-windows.md  build-phases.md  constraints.md
mac/: Package.swift  make-signing-cert.sh  project.yml
mac/ScanToExternApp.xcodeproj/: project.pbxproj
mac/ScanToExternApp/AI/: AIProcessor.swift  ClaudeProcessor.swift  FoundationModelProcessor.swift
mac/ScanToExternApp/App/: AppDelegate.swift  ScanToExternAppApp.swift  ScanmarkerAccountWindowController.swift  WelcomeWindowController.swift
mac/ScanToExternApp/Hardware/: BTLog.swift  BluetoothManager.swift  DeviceRegistry.swift  HardwareManager.swift  ScanFlowState.swift  USBSerialManager.swift
mac/ScanToExternApp/History/: HistoryView.swift  ScanHistoryStore.swift  ScanRecord.swift
mac/ScanToExternApp/Injection/: AXInjector.swift  ClipboardInjector.swift  InjectionRouter.swift  WebSocketBridge.swift
mac/ScanToExternApp/MenuBar/: DevicesView.swift  MenuBarController.swift  MenuBarView.swift
mac/ScanToExternApp/OCR/: RunOCRClient.swift  VisionCorrector.swift
mac/ScanToExternApp/Permissions/: PermissionsManager.swift  PermissionsOnboardingView.swift
shared/: scan-record-schema.sql  websocket-protocol.md
shared/icons/: README.txt
windows/: REVIEW.md  WINDOWS_SETUP.md
windows/src/: history.html  index.html  preview.html  settings.html  styles.css
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/capabilities/: default.json
windows/src-tauri/src/: main.rs
windows/src-tauri/src/ai/: claude_processor.rs  credential_store.rs  mod.rs  run_ocr_client.rs
windows/src-tauri/src/hardware/: bluetooth.rs  mod.rs  usb_serial.rs
windows/src-tauri/src/history/: store.rs
windows/src-tauri/src/injection/: clipboard_injector.rs  focus.rs  mod.rs  router.rs  uia_injector.rs  websocket_bridge.rs
windows/src-tauri/src/preview/: mod.rs
(+8 files in other folders)
